# monitoring-portal

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  about.py  all_sky_camera.py  borehole_ground_water_content.py  cache-cache-test.py  compose.yml  cron-jobs.py  entrypoint.sh  functions_instrument_status.py  geomorphology.py  ground_ice_content.py  insar_deformation.py  instrument_status.py  landslide_model.py  load_boreholes_data_Tilsig_and_MET.py  main_boreholes_temperature.py  main_weather_stations.py  plot_boreholes_data.py  pyproject.toml  run-cron.sh  sources_boreholes_MET.py  sources_boreholes_Tilsig.py  sources_weather_stations_MET.py  sources_weather_stations_Tilsig.py  streamlit_app.py  time_lapse_cameras.py  weather_model.py
.github/: dependabot.yml
.github/workflows/: docker-build-push.yml  test-and-lint.yml
.streamlit/: secrets.toml.example
config/: boreholes.json
map_data_source/: geomorphology.7z
src/app/: version.py
src/app/loader/: functions_instrument_status.py  load_boreholes_data_Tilsig_and_MET.py
src/app/pages/: about.py  all_sky_camera.py  borehole_ground_water_content.py  geomorphology.py  (+9 more)
src/auth/: secrets.py  tilsig.py
src/config/: config_class.py  config_manager.py
src/datasource/: __init__.py  datasource_model.py  frost.py  tilsig.py
src/init/: init_geomorph_map.py
src/map/: base_map.py  geomorphology_map.py
src/plots/: figure_models.py  test_fig.py
src/sensors/: borehole.py  sensors_models.py
src/utils/: embed_folium_map.py  load_html.py  load_json_file.py  object_name.py  utc_managment.py
(+5 files in other folders)
