[project]
name = "monitoring-portal"
version = "0.1.0"
description = "ThawingLYR monitoring portal"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "datetime>=6.0",
    "folium>=0.20.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pydantic>=2.13.3",
    "requests>=2.33.1",
    "streamlit>=1.57.0",
    "streamlit-folium>=0.27.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.12",
]
