[project]
name = "monitoring-portal"
version = "0.1.0"
description = "ThawingLYR monitoring portal"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dask>=2026.3.0",
    "datetime>=6.0",
    "folium>=0.20.0",
    "loguru>=0.7.3",
    "matplotlib>=3.11.0",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "plotly>=6.7.0",
    "pydantic>=2.13.4",
    "requests>=2.34.2",
    "streamlit>=1.57.0",
    "streamlit-folium>=0.27.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "nbformat>=4.2.0",
    "pre-commit>=4.6.0",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.12",
]
